@@ -218,6 +218,16 @@ AC_DEFUN([OVS_CHECK_LINUX_TC], [
     ])],
     [AC_DEFINE([HAVE_TCA_STATS_PKT64], [1],
                [Define to 1 if TCA_STATS_PKT64 is available.])])
+
+  AC_COMPILE_IFELSE([
+    AC_LANG_PROGRAM([#include <linux/pkt_sched.h>], [
+        int x = TCA_HTB_RATE64;
+    ])],
+    [AC_SUBST(HAVE_TCA_HTB_RATE64,yes)
+     AC_DEFINE([HAVE_TCA_HTB_RATE64], [1],
+               [Define to 1 if TCA_HTB_RATE64 is available.])],
+    [AC_SUBST(HAVE_TCA_HTB_RATE64,no)]
+    )
 ])
 
 dnl OVS_CHECK_LINUX_SCTP_CT
